Fixfeature text sizing when horizontal on mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -400,11 +400,12 @@ div.widget .extendednavigation > ul, div.widget.extendednavigation > ul {
 			}
 		}
 	}
-	h2 {
+	h2,
+	h3 {
 		padding-bottom: 12px;
 		@media only screen and (max-height: 420px) {
-			font-size: bkscale(@font-swatch1-font-size, 0.68);
-			line-height: bkscale(@font-swatch1-line-height, 0.75);
+			font-size: bkscale(@font-swatch8-font-size, 0.6); 
+			line-height: bkscale(@font-swatch8-line-height, 0.5);
 		}
 	}
 	button {
